# healthpoint

./: .gitignore  AI_ML_DL_PRODUCTION_READY_SUMMARY.md  CHANGELOG.md  COMPLETE_PLATFORM_RECOVERY_REPORT.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_FEATURE_AUDIT.md  DEPLOYMENT_GUIDE.md  Dockerfile.admin-fee  Dockerfile.ai-fraud  Dockerfile.base  FEE_STRUCTURE_AND_COMMUNICATION_SYSTEM.md  FINAL_COMPLETE_PLATFORM_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  GAP_RESOLUTION_FINAL.md  GEORGETOWN_IDR_ANALYSIS_PLATFORM_IMPROVEMENTS.md  GFE_IDR_CMS_DATA_ANALYSIS.md  GFE_TECHNICAL_SPECIFICATIONS.md  HEALTHPOINT_COMPLETE_IMPLEMENTATION_REPORT.md  HEALTHPOINT_LAKEHOUSE_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  NSA_IDR_COMPLETE_PLATFORM_DOCUMENTATION.md  NSA_IDR_IMPLEMENTATION_ARCHITECTURE.md  PLATFORM_VALIDATION_RESULTS.md  PLATFORM_VERIFICATION_DEMO.md  PRODUCTION_ASSESSMENT.md  PRODUCTION_ASSESSMENT_V2.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  PRODUCTION_READINESS_V3.md  README.md  SELF_HOSTING.md  UNIFIED_ARTIFACT_SUMMARY.md  UNIFIED_PLATFORM_FINAL_PACKAGE.md  UNIFIED_PLATFORM_VERIFICATION_REPORT.md  WORKFLOW_CONFIDENCE_REPORT.md  admin_fee_management_service.py  admin_fee_management_service_enhanced.py  (+113 more)
admin-dashboard/: index.html
admin-fee-dashboard-enhanced/: index.html
admin-fee-management-dashboard/: package.json
aggregator-website/: index.html
ai-service/: main.py  (+2 more)
services/rust/: Cargo.toml  Dockerfile
services/rust/src/: fluvio_bootstrap.rs  main.rs
(+744 files in other folders)
